# knight-devs-platform

./: .gitignore  codegen.ts  fix-docker-sharing.sh  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
api/: README.md  ats_scorer.py  index.py  job_scraper_service.py  requirements.txt  resume_parser.py  test_job_scraper.py
api/jobspy/: __init__.py  model.py  util.py
api/jobspy/bayt/: __init__.py  (+1 more)
app/: globals.css  layout.tsx  page.tsx
app/admin/: admin-data.tsx  admin-view.tsx  hooks.ts  layout.tsx  page.tsx
app/antd-demo/: page.tsx
app/candidate/: layout.tsx  page.tsx
app/flask-test/: page.tsx
app/graphql-demo/: page.tsx
app/onboarding/: page.tsx
app/protected/: layout.tsx  page.tsx
app/settings/: layout.tsx
components/: antd-theme-provider.tsx  app-header.tsx  auth-button.tsx  breadcrumb.tsx  env-var-warning.tsx  forgot-password-form.tsx  graphql-example.tsx  knight-logo.tsx  login-form.tsx  sign-up-form.tsx  theme-switcher.tsx  update-password-form.tsx
components/admin/: admin-layout-wrapper.tsx  admin-sidebar.tsx  detailed-error-display.tsx  job-hooks.ts  job-results.tsx  scraping-config-manager.tsx
components/candidate/: application-confirmation-modal.tsx  ats-score-display.tsx  ats-scoring-demo.tsx  ats-scoring-hooks.ts  candidate-header.tsx  enhanced-candidate-header.tsx  filter-buttons.tsx  infinite-job-list.tsx  job-application-hooks.ts  job-card.tsx  job-close-hooks.ts  job-detail-panel.tsx  job-hooks.ts  job-list-item.tsx  job-list-with-ats-scoring.tsx  resume-generation-button.tsx  resume-generation-hooks.ts  saved-searches-hooks.ts  search-bar.tsx  simple-header.tsx  use-candidate-discover.ts
components/onboarding/: experience-step.tsx  job-preferences-step.tsx  personal-info-step.tsx  profile-completion-step.tsx  resume-upload.tsx  skills-step.tsx
components/settings/: settings-layout.tsx
docs/: ats-scoring-implementation.md  build-fix-server-client.md  server-client-pattern.md
lib/: builtin-saved-answers.ts  extension-auth.ts  extension-candidate-data.ts  format-profile-location.ts  profile-selection.ts  question-key-browser.ts  question-key.ts  server-auth.ts
lib/apollo/: ApolloWrapper.tsx  apollo-client.ts  hooks.ts
lib/supabase/: bearer.ts  extension-auth-server.ts
supabase/: config.toml
types/: onboarding.ts
(+70 files in other folders)
