[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knight-devs-platform-api"
version = "0.1.0"
description = "Flask API for Knight Devs Platform"
authors = [
    {name = "Knight Devs", email = "dev@knightdevs.com"}
]
readme = "api/README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core Flask dependencies
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    
    # Data processing and analysis
    "pandas==2.2.0",
    "numpy>=1.26.0",
    
    # Web scraping and HTTP
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "selenium==4.15.2",
    "lxml==4.9.3",
    "tls-client==1.0.0",
    "urllib3==2.5.0",
    
    # Text processing and parsing
    "markdownify==0.11.6",
    "regex==2023.12.25",
    
    # AI and ML
    "openai==1.3.0",
    "pydantic==2.5.0",
    
    # Additional dependencies
    "webdriver-manager==4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["api"]
include = ["jobspy*", "*.py"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["api/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
